Add swagger body to updateTransantion
